src/styles/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "./scroll-fade-effect.css";

@plugin "@tailwindcss/typography";
@plugin "@toolwind/corner-shape";

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-accent: var(--accent);
  --color-accent-muted: var(--accent-muted);
  --color-accent-foreground: var(--accent-foreground);
  --color-border: var(--border);
  --color-edge: var(--edge);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-info: var(--info);
  --color-success: var(--success);
  --color-destructive: var(--destructive);
  --color-link: var(--link);
  --color-surface: var(--surface);
  --color-surface-foreground: var(--surface-foreground);
  --color-code: var(--code);
  --color-code-foreground: var(--code-foreground);
  --color-code-number: var(--code-number);
  --color-code-highlight: var(--code-highlight);
  --color-selection: var(--selection);
  --color-selection-foreground: var(--selection-foreground);

  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-pixel-square: var(--font-geist-pixel-square);
}

@utility no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */

  /* Hide scrollbar for Chrome, Safari and Opera */
  &::-webkit-scrollbar {
    display: none;
  }
}

@utility link {
  @apply font-medium underline underline-offset-4;
}

@utility screen-line-before {
  @apply relative before:absolute before:top-0 before:-left-[100vw] before:-z-1 before:h-px before:w-[200vw] before:bg-edge;
}

@utility screen-line-after {
  @apply relative after:absolute after:bottom-0 after:-left-[100vw] after:-z-1 after:h-px after:w-[200vw] after:bg-edge;
}

@utility step {
  counter-increment: step;

  &::before {
    @apply mr-2 inline-flex size-7 items-center justify-center rounded-full border border-muted-foreground/15 bg-muted text-center -indent-px text-sm font-medium text-muted-foreground ring-1 ring-edge ring-offset-1 ring-offset-background md:absolute md:-mt-0.5 md:-ml-11.5 md:size-8;
    content: counter(step);
  }
}

:root {
  /* white */
  --background: oklch(1 0 0);

  /* zinc-950 */
  --foreground: oklch(0.141 0.005 285.823);

  /* zinc-950 */
  --primary: oklch(0.141 0.005 285.823);

  /* zinc-50 */
  --primary-foreground: oklch(0.985 0 0);

  /* zinc-100 */
  --secondary: oklch(0.967 0.001 286.375);

  /* zinc-950 */
  --secondary-foreground: oklch(0.141 0.005 285.823);

  /* zinc-100 */
  --muted: oklch(0.967 0.001 286.375);

  /* zinc-500 */
  --muted-foreground: oklch(0.552 0.016 285.938);

  /* white */
  --card: oklch(1 0 0);

  /* zinc-950 */
  --card-foreground: oklch(0.141 0.005 285.823);

  /* white */
  --popover: oklch(1 0 0);

  /* zinc-950 */
  --popover-foreground: oklch(0.141 0.005 285.823);

  /* zinc-100 */
  --accent: oklch(0.967 0.001 286.375);

  --accent-muted: color-mix(in oklab, var(--accent) 50%, transparent);

  /* zinc-900 */
  --accent-foreground: oklch(0.21 0.006 285.885);

  /* zinc-200 */
  --border: oklch(0.92 0.004 286.32);

  /* color-mix */
  --edge: color-mix(in oklab, var(--border) 64%, var(--background));

  /* zinc-200 */
  --input: oklch(0.92 0.004 286.32);

  /* zinc-400 */
  --ring: oklch(0.705 0.015 286.067);

  --info: oklch(0.67 0.17 244.98);

  /* green-500 */
  --success: oklch(0.723 0.219 149.579);

  /* red-600 */
  --destructive: oklch(0.577 0.245 27.325);

  /* blue-700 */
  --link: oklch(0.488 0.243 264.376);

  /* zinc-50 */
  --surface: oklch(0.985 0 0);

  /* zinc-950 */
  --surface-foreground: oklch(0.141 0.005 285.823);

  --code: var(--surface);
  --code-foreground: var(--surface-foreground);

  /* zinc-400 */
  --code-number: oklch(0.705 0.015 286.067);

  --code-highlight: oklch(0.9584 0.0013 286.37);

  /* zinc-950 */
  --selection: oklch(0.141 0.005 285.823);

  /* zinc-50 */
  --selection-foreground: oklch(0.985 0 0);
}

.dark {
  /* zinc-950 */
  --background: oklch(0.141 0.005 285.823);

  /* zinc-50 */
  --foreground: oklch(0.985 0 0);

  /* zinc-50 */
  --primary: oklch(0.985 0 0);

  /* zinc-950 */
  --primary-foreground: oklch(0.141 0.005 285.823);

  /* zinc-800 */
  --secondary: oklch(0.274 0.006 286.033);

  /* zinc-50 */
  --secondary-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --muted: oklch(0.274 0.006 286.033);

  /* zinc-400 */
  --muted-foreground: oklch(0.705 0.015 286.067);

  /* zinc-900 */
  --card: oklch(0.21 0.006 285.885);

  /* zinc-50 */
  --card-foreground: oklch(0.985 0 0);

  /* zinc-900 */
  --popover: oklch(0.21 0.006 285.885);

  /* zinc-50 */
  --popover-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --accent: oklch(0.274 0.006 286.033);

  --accent-muted: color-mix(in oklab, var(--accent) 20%, transparent);

  /* zinc-50 */
  --accent-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --border: oklch(0.274 0.006 286.033);

  /* --edge: color-mix(in oklab, var(--border) 64%, var(--background)); */

  --input: lab(100% 0 0 / 0.15);

  /* zinc-500 */
  --ring: oklch(0.552 0.016 285.938);

  /* green-500 */
  --success: oklch(0.723 0.219 149.579);

  /* red-700 */
  --destructive: oklch(0.505 0.213 27.518);

  /* blue-500 */
  --link: oklch(0.623 0.214 259.815);

  /* zinc-900 */
  --surface: oklch(0.21 0.006 285.885);

  /* zinc-50 */
  --surface-foreground: oklch(0.985 0 0);

  --code: var(--surface);
  --code-foreground: var(--surface-foreground);

  /* zinc-500 */
  --code-number: oklch(0.552 0.016 285.938);

  /* zinc-800 */
  --code-highlight: oklch(0.274 0.006 286.033);

  /* zinc-50 */
  --selection: oklch(0.985 0 0);

  /* zinc-950 */
  --selection-foreground: oklch(0.141 0.005 285.823);
}

@layer base {

  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    @apply border-border outline-ring/50;
  }

  ::selection {
    @apply bg-selection text-selection-foreground;
  }

  body {
    @apply bg-background font-sans text-foreground antialiased;
    font-synthesis-weight: none;
    text-rendering: optimizeLegibility;
  }

  /* Custom scrollbar styling. Thanks @shadcn-ui */
  ::-webkit-scrollbar {
    width: 5px;
  }

  ::-webkit-scrollbar-track {
    background: transparent;
  }

  ::-webkit-scrollbar-thumb {
    background: var(--border);
    border-radius: 5px;
  }

  * {
    scrollbar-width: thin;
    scrollbar-color: var(--border) transparent;
  }

  [id] {
    @apply scroll-mt-18;
  }

  .duck-follower {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 50;

    pointer-events: none;
    image-rendering: pixelated;
    image-rendering: -moz-crisp-edges;
    image-rendering: crisp-edges;

    will-change: transform;
    transition: none;
  }
}

@layer components {
  [data-rehype-pretty-code-figure] {
    @apply relative my-[1.25em] rounded-xl bg-code text-code-foreground;

    pre {
      @apply no-scrollbar overflow-x-auto overscroll-x-contain px-4 py-4 has-data-line-numbers:px-0;
    }

    code {
      @apply w-max min-w-full pr-(--code-padding-right, 0) font-mono text-sm;
    }

    [data-line] {
      @apply py-0.5;
    }
  }

  [data-line] span {
    @apply text-(--shiki-light) dark:text-(--shiki-dark);
  }

  [data-rehype-pretty-code-title] {
    @apply flex items-center gap-3 border-b px-4 py-2.5 pe-10 text-sm text-muted-foreground group-data-[slot=collapsible]/collapsible:pe-20 [&_svg]:size-4 [&_svg]:shrink-0 [&_svg]:text-muted-foreground;
  }

  [data-line-numbers] {
    counter-reset: line;
  }

  [data-line-numbers]>[data-line]::before {
    counter-increment: line;
    content: counter(line);
    @apply sticky left-0 inline-block w-16 bg-code pe-6 text-right text-sm text-code-number;
  }

  [data-line-numbers] [data-highlighted-line][data-line]::before {
    @apply bg-code-highlight;
  }

  [data-highlighted-line] {
    @apply bg-code-highlight;
  }

  [data-fade-overlay] {
    @apply pointer-events-none absolute top-0 right-0 z-1 rounded-tr-xl;

    --fade-linear-gradient: linear-gradient(to right,
        transparent 0,
        color-mix(in oklab, var(--fade-color, var(--background)) 20%, transparent) 10px,
        color-mix(in oklab, var(--fade-color, var(--background)) 50%, transparent) 25px,
        color-mix(in oklab, var(--fade-color, var(--background)) 80%, transparent) 35px,
        var(--fade-color, var(--background)) 45px);

    --fade-radial-gradient: radial-gradient(ellipse at top right,
        var(--fade-color, var(--background)) 30%,
        color-mix(in oklab, var(--fade-color, var(--background)) 80%, transparent) 40%,
        color-mix(in oklab, var(--fade-color, var(--background)) 50%, transparent) 50%,
        color-mix(in oklab, var(--fade-color, var(--background)) 20%, transparent) 60%,
        transparent 70%);

    width: var(--fade-width, 6rem);
    height: var(--fade-height, 2.5rem);
    background: var(--fade-background, var(--fade-linear-gradient));
  }
}

@utility prose-siby {
  @apply prose-headings:tracking-tight prose-headings:text-balance prose-h2:font-semibold;
  @apply prose-a:font-medium prose-a:wrap-break-word prose-a:text-foreground prose-a:underline prose-a:underline-offset-4;
  @apply prose-code:rounded-md prose-code:border prose-code:bg-muted/50 prose-code:px-[0.3rem] prose-code:py-[0.2rem] prose-code:text-sm prose-code:font-normal prose-code:before:content-none prose-code:after:content-none;
  @apply prose-strong:font-medium;
  @apply prose-hr:border-edge;
}

@utility code-inline {
  @apply rounded-md border bg-muted/50 px-1.5 py-0.5 font-mono text-[0.8125rem] whitespace-pre-wrap in-data-table-nowrap:whitespace-nowrap;
}

@utility prose-no-margin {
  &> :first-child {
    @apply mt-0;
  }

  &> :last-child {
    @apply mb-0;
  }

  :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)),
  :where([data-rehype-pretty-code-figure]) {
    @apply mt-3 mb-3;
  }
}

@utility extend-touch-target {
  @media (pointer: coarse) {
    @apply relative touch-manipulation after:absolute after:-inset-2;
  }
}

@custom-variant supports-timeline-scroll {
  @supports (animation-timeline: scroll()) {
    @slot;
  }
}

@custom-variant supports-corner-shape {
  @supports (corner-shape: initial) {
    @slot;
  }
}

@custom-variant data-open {

  &:where([data-state="open"]),
  &:where([data-open]:not([data-open="false"])) {
    @slot;
  }
}

@custom-variant data-closed {

  &:where([data-state="closed"]),
  &:where([data-closed]:not([data-closed="false"])) {
    @slot;
  }
}

